# ROS-Dreamer-Phy

boey_description/: CMakeLists.txt  package.xml
boey_description/launch/: boey_empty.launch  boey_sim.launch  description.launch
boey_description/urdf/: base.xacro  boey.urdf.xacro  sensors.xacro
cmd_smoother/: CMakeLists.txt  package.xml
cmd_smoother/launch/: ackermann_smooth.launch  drive_smooth.launch  twist_smooth.launch
cmd_smoother/src/: ackermann_smoother.py  drive2twist_smoother.py  drive_smoother.py  twist2drive_smoother.py  twist_smoother.py
dreamer2ros/: CMakeLists.txt  package.xml
dreamer2ros/launch/: img2img_deploy.launch  img2img_train.launch  imgphy2img_deploy.launch  imgphy2img_train.launch  lzr2img_deploy.launch  lzr2img_train.launch  lzrphy2img_deploy.launch  lzrphy2img_train.launch
dreamer2ros/msg/: Act2.msg  Act3.msg  Act4.msg  Act5.msg  Act6.msg
dreamer2ros/src/: image_phy_policy.py  image_policy.py  img2img_deploy.py  img2img_train.py  imgphy2img_deploy.py  imgphy2img_train.py  laser_int_policy.py  laser_models.py  laser_phy_policy.py  laser_policy.py  lzr2img_deploy.py  lzr2img_train.py  lzrphy2img_deploy.py  lzrphy2img_train.py  models.py  ros_lzr2lzr_dreamer.py  ros_lzrint2img_dreamer.py  tools.py
flip_lidar/: CMakeLists.txt  package.xml
flip_lidar/launch/: filter_lidar.launch  flip_lidar.launch
flip_lidar/src/: filter_lidar.cpp  flip_lidar.cpp
kf_ekf_loc/: CMakeLists.txt  package.xml  setup.py
kf_ekf_loc/launch/: kf_ekf_loc_real.launch  kf_ekf_loc_simu.launch
kf_ekf_loc/src/: ekf.py
mag2rpy/: CMakeLists.txt  package.xml
reward_generator/: CMakeLists.txt  package.xml
reward_generator/include/reward_generator/: shore_docker.h  shore_docker_v2.h  shore_follower.h
reward_generator/launch/: shore_docker.launch  shore_docker_v2.launch  shore_follower.launch
reward_generator/msg/: docker_reward.msg  follower_reward.msg
reward_generator/src/: shore_docker.cpp  shore_docker_v2.cpp  shore_follower.cpp
rl_server/: CMakeLists.txt  package.xml  test.py  test_parking.py
velocity_proj/: CMakeLists.txt  package.xml
(+31 files in other folders)
