<?xml version="1.0"?>
<package format="2">
  <name>boey_description</name>
  <version>1.0.0</version>
  <description>URDF description for the Boey</description>

  <maintainer email="antoine.richard@gatech.edu">Antoine Richard</maintainer>
  <author email="antoine.richard@gatech.edu">Antoine Richard</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
